working on footer section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
+    <!-- Font Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -157,6 +158,27 @@ structured by design.</h1>
             </div>                  
         </section>
     </main>  
+    <footer id="footer">
+        <div id="footer-section" class="footer-section">
+            <div class="first-section">
+                <div class="footer-logo">
+                    <img src="assets/logo-footer.png" alt="my company logo">
+                </div>
+                <div class="social-link">
+                    <h4>Social links </h4>
+                    <a href="http://"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="http://"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+
+            </div>
+            <hr class="line-break">
+            <div class="second-section">
+                <p>© 2024 Personal Knowledge Vault. All rights reserved.</p>
+
+            </div>
+        </div>  
+    </footer>
       
 </body>
 </html>
